--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
-    "start": "next start -p $PORT",
+    "dev": "NODE_OPTIONS=\"--no-deprecation\" next dev --turbopack",
+    "build": "NODE_OPTIONS=\"--no-deprecation\" next build --turbopack",
+    "start": "NODE_OPTIONS=\"--no-deprecation\" next start -p $PORT",
     "lint": "eslint",
     "type-check": "tsc --noEmit"
   },
