--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.8",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@telegram-apps/sdk-react": "^3.3.7",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "critters": "^0.0.23",
